Correct centering and justifications

--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,16 @@ body {
 }
 
 .profile-image {
+    display: block;
+    margin: 0 auto 1.5rem auto;
     width: 200px;
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 1.5rem;
 }
 
-h1 {
+h1.name {
+    text-align: center;
     margin-bottom: 1rem;
     color: #ffffff;
 }
