Add favicon support

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ h1.name {
     max-width: 600px;
     margin: 0 auto 2rem auto;
     color: #b3b3b3;
-    text-align: justify;
+    text-align: left;
 }
 
 .social-links {
